--- a/requirements.in
+++ b/requirements.in
@@ -9,8 +9,8 @@ Pillow
 PyYAML>=5.3
 scipy>=1.4.1
 tensorboard>=2.2
-torch>=1.6.0
-torchvision>=0.7.0
+torch==1.7.1
+torchvision==0.8.2
 tqdm>=4.41.0
 
 # logging -------------------------------------
