--- a/renovate.json
+++ b/renovate.json
@@ -10,4 +10,22 @@
   "constraints": {
     "python": "==3.9"
   },
+  "schedule:daily",
+    {
+      "groupName": "all dependencies",
+      "separateMajorMinor": true,
+      "groupSlug": "all",
+      "packageRules": [
+        {
+          "packagePatterns": [
+            "*"
+          ],
+          "groupName": "all dependencies",
+          "groupSlug": "all"
+        }
+      ],
+      "lockFileMaintenance": {
+        "enabled": true
+      }
+    }
 }
